staging/mongo-jiva/mongo-jiva-client.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mongo-jiva-client
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app : mongo-jiva-client
    spec:
      containers:
        - name: mongo-jiva-client-container
          image: openebs/www-mongo-jiva-client:ghgh89
          imagePullPolicy: Always
          ports:
          - containerPort: 80
