staging/mongo-jiva/mongo-jiva-backend.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mongo-jiva-backend
spec:
  selector:
    matchLabels:
      app: mongo-jiva-backend
  template:
    metadata:
      labels:
        app: mongo-jiva-backend
    spec:
      containers:
      - name: mongo-jiva-backend-container
        ports:
        - containerPort: 3000
        args: [ "mongodb://mongo-0.mongo", "testing", "maya-apiserver-service.openebs" ]
        image: mayadata/www-mongo-jiva-test-backend:master-f6afef2
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: mongo-jiva
  labels:
    app: mongo-jiva-backend
  name: mongo-jiva-backend-service
spec:
  ports:
  - name: mongo-jiva-backend
    port: 3000
    protocol: TCP
  selector:
    app: mongo-jiva-backend
