staging/mongo-jiva/test.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo-jiva-client
  name: mongo-jiva-client-service
spec:
  type: NodePort
  ports:
  - name: mongo-jiva-client
    port: 80
    protocol: TCP
  selector:
    app: mongo-jiva-client
